# floorspace.js

./: .eslintrc.js  .gitignore  .jsbeautifyrc  .travis.yml  Gemfile  LICENSE  LICENSE.md  README.md  babel.config.js  build.rb  check_version.js  copyright.txt  deploy.sh  embeddable_geometry_editor.html  embedded.html  geometry_editor.html  index.html  mkdocs.yml  package-lock.json  package.json  publish-key.enc  server.js  snapping-thoughts.md  standalone_geometry_editor.html  test.html  testBundle.js  tsconfig.json  zoom.html
.bundle/: config
.github/workflows/: deploy.yml  test-osw.yml  test.yml
3DViewer/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  generate-wasm.sh  index.html  index.js  libtest_lib.js  libtest_lib.wasm
3DViewer/src/: main.cpp
3DViewer/src/utilities/core/: Assert.hpp  Compare.cpp  Compare.hpp  Json.cpp  Json.hpp  Logger.hpp  UUID.cpp  UUID.hpp
3DViewer/src/utilities/geometry/: Emscripten.cpp  FloorplanJS.cpp  ThreeJS.cpp
3DViewer/viewer/: index.html  index.js  main.js  styles.css
config/: dev.env.js  index.js
docker/: Dockerfile  docker-compose.yml
docs/: 404.html  index.html  index.md  sitemap.xml
docs/search/: search_index.json
measures/import_floorplan/: measure.rb  measure.xml
patches/: nightwatch+0.9.19.patch
schema/: create_library.rb  default_library.json  example.json  geometry_schema.json
src/: App.vue  api.js  main.js  main.ts  utilities.js
src/components/: 3d.vue  AssignComponentMenu.vue  AssignObjectModal.vue  AssignPropertiesList.vue  BackgroundModal.vue  Canvas.vue  ComponentInstanceEditBar.vue  ComponentMenu.vue  ComponentsList.vue  EditBar.vue  EditableSelect.vue  EditableSelectList.vue  EditableSelectTable.vue  EditableTable.vue  ExpandableDrawer.vue  GenericInput.vue  Grid.vue  ImageUpload.vue  Info.vue  Inspector.vue  Library.vue  LibraryRows.vue  LibrarySelect.vue  Modal.vue  Navigation.vue  NonChromeWarning.vue  ObjectModal.vue  PrettySelect.vue  RenderByDropdown.vue  Resize.vue  ResizeGroup.vue  TextureSelect.vue  Textures.vue  Toolbar.vue  ValidatedInput.vue  svgs.js
src/models/: building.js  geometry.js
src/scss/: config.scss  main.scss
src/store/: index.js  init.js  mutations.js  (+3 more)
static/: libtest_lib.js.mem
(+567 files in other folders)
